# prism

./: .env.example  .gitignore  README.md  app.py  package.json
.claude/: prd.md
Polymarket/: index.html  package.json  tailwind.config.ts
Polymarket/src/: App.tsx  index.css
Polymarket/src/contexts/: WalletContext.tsx
Polymarket/src/hooks/: useCopyTrading.ts  usePolymarket.ts  usePolymarketTrading.ts  useTradeExecutor.ts
Polymarket/src/lib/: mockData.ts
Polymarket/src/pages/: CopyTrading.tsx  Dashboard.tsx  Index.tsx  (+4 more)
Polymarket/supabase/: config.toml
agent/: agent.ts  package.json  prism.db  tsconfig.json
agent/characters/: prism_orchestrator.json
agent/src/: actions.ts  evaluators.ts  providers.ts
anchor/: Anchor.toml
anchor/programs/prism_markets/: Cargo.toml  lib.rs
anchor/tests/: prism_markets.ts
backend/: run.py
backend/simulation/: mirofish_client.py
docs/: README.md  mock.md  open.md
locales/: languages.json  zh.json
miro_backend/: requirements.txt
miro_backend/app/: __init__.py
nos_job_def/: prism_agent.json
nosana/: Dockerfile  docker-compose.yml  oasis_simulation.json
nosana/scripts/: deploy_nosana.ts  setup_local.sh
scripts/: setup_local.sh
simulation/models/: agent_prompts.json  sentiment_parser.py
simulation/scripts/: analyze_actions.py  prism_oracle.py  run_matrix.py
ui/: next.config.js  package.json  tailwind.config.ts
ui/app/: globals.css  layout.tsx  page.tsx
ui/components/: MarketDashboard.tsx  TerminalUI.tsx
ui/hooks/: usePrismMarket.ts  useSolanaWallet.ts
ui/lib/: pmxt-client.ts  utils.ts
(+35 files in other folders)
