[package]
name = "prism-markets"
version = "0.1.0"
description = "PRISM prediction market smart contracts"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "prism_markets"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["token", "associated_token"] }
